@@ -1,7 +1,5 @@
-
-
-#ifndef _OPENCL_CAST_H
-#define _OPENCL_CAST_H
+#ifndef INC_CIPHER_CAST_H
+#define INC_CIPHER_CAST_H
 
 // #include "opencl_misc.h"
 #define GET_UINT32BE(n, b, i)	  \
@@ -32,28 +30,26 @@ typedef struct {
 #define U8d(x) GETBYTE(x,0)
 
 /* CAST uses three different round functions */
-#define _CAST_f1(l, r, km, kr) \
+#define CAST_f1(l, r, km, kr) \
 	t = hc_rotl32_S(km + r, kr); \
 	l ^= ((s_S[0][U8a(t)] ^ s_S[1][U8b(t)]) - \
 	 s_S[2][U8c(t)]) + s_S[3][U8d(t)];
-#define _CAST_f2(l, r, km, kr) \
+#define CAST_f2(l, r, km, kr) \
 	t = hc_rotl32_S(km ^ r, kr); \
 	l ^= ((s_S[0][U8a(t)] - s_S[1][U8b(t)]) + \
 	 s_S[2][U8c(t)]) ^ s_S[3][U8d(t)];
-#define _CAST_f3(l, r, km, kr) \
+#define CAST_f3(l, r, km, kr) \
 	t = hc_rotl32_S(km - r, kr); \
 	l ^= ((s_S[0][U8a(t)] + s_S[1][U8b(t)]) ^ \
 	 s_S[2][U8c(t)]) - s_S[3][U8d(t)];
 
-#define _CAST_F1(l, r, i, j) _CAST_f1(l, r, K[i], K[i+j])
-#define _CAST_F2(l, r, i, j) _CAST_f2(l, r, K[i], K[i+j])
-#define _CAST_F3(l, r, i, j) _CAST_f3(l, r, K[i], K[i+j])
-
+#define CAST_F1(l, r, i, j) CAST_f1(l, r, K[i], K[i+j])
+#define CAST_F2(l, r, i, j) CAST_f2(l, r, K[i], K[i+j])
+#define CAST_F3(l, r, i, j) CAST_f3(l, r, K[i], K[i+j])
 
 /* OpenSSL API compatibility */
 #define CAST_set_key(ckey, len, key)     Cast5SetKey(ckey, len, key)
 #define CAST_ecb_encrypt(in, out, ckey)  Cast5Encrypt(in, out, ckey)
 #define CAST_ecb_decrypt(in, out, ckey)  Cast5Decrypt(in, out, ckey)
 
-
-#endif /* _OPENCL_CAST_H */
+#endif /* INC_CIPHER_CAST_H */
